force-app/main/default/objects/Ofertas_posicionesSet__x/Ofertas_posicionesSet__x.object-meta.xml
<CustomObject>
    <externalDataSource>SAP</externalDataSource>
    <externalName>Ofertas_posicionesSet</externalName>
    <label>Ofertas_posicionesSet</label>
    <pluralLabel>Ofertas_posicionesSet</pluralLabel>
</CustomObject>