force-app/main/default/objects/Ofertas_posicionesSet__x/fields/Conversor__c.field-meta.xml
<CustomField>
    <fullName>Conversor__c</fullName>
    <description>Conversor</description>
    <externalDeveloperName>Conversor</externalDeveloperName>
    <label>Conversor</label>
    <length>9</length>
    <type>Text</type>
</CustomField>