force-app/main/default/objects/Ofertas_posicionesSet__x/fields/Dnet__c.field-meta.xml
<CustomField>
    <fullName>Dnet__c</fullName>
    <description>Dnet</description>
    <externalDeveloperName>Dnet</externalDeveloperName>
    <label>Dnet</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>