force-app/main/default/objects/Ofertas_posicionesSet__x/fields/FormatSf__c.field-meta.xml
<CustomField>
    <fullName>FormatSf__c</fullName>
    <description>FormatSf</description>
    <externalDeveloperName>FormatSf</externalDeveloperName>
    <label>FormatSf</label>
    <length>3</length>
    <type>Text</type>
</CustomField>