force-app/main/default/objects/Ofertas_posicionesSet__x/fields/Ltotal__c.field-meta.xml
<CustomField>
    <fullName>Ltotal__c</fullName>
    <description>Ltotal</description>
    <externalDeveloperName>Ltotal</externalDeveloperName>
    <label>Ltotal</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>