force-app/main/default/objects/Ofertas_posicionesSet__x/fields/Mat3__c.field-meta.xml
<CustomField>
    <fullName>Mat3__c</fullName>
    <description>Mat3</description>
    <externalDeveloperName>Mat3</externalDeveloperName>
    <label>Mat3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>