force-app/main/default/objects/Ofertas_posicionesSet__x/fields/Mat5__c.field-meta.xml
<CustomField>
    <fullName>Mat5__c</fullName>
    <description>Mat5</description>
    <externalDeveloperName>Mat5</externalDeveloperName>
    <label>Mat5</label>
    <length>3</length>
    <type>Text</type>
</CustomField>