force-app/main/default/objects/Ofertas_posicionesSet__x/fields/Orderlin__c.field-meta.xml
<CustomField>
    <fullName>Orderlin__c</fullName>
    <description>Orderlin</description>
    <externalDeveloperName>Orderlin</externalDeveloperName>
    <label>Orderlin</label>
    <length>6</length>
    <type>Text</type>
</CustomField>