force-app/main/default/objects/Ofertas_posicionesSet__x/fields/Sku__c.field-meta.xml
<CustomField>
    <fullName>Sku__c</fullName>
    <description>Sku</description>
    <externalDeveloperName>Sku</externalDeveloperName>
    <label>Sku</label>
    <length>18</length>
    <type>Text</type>
</CustomField>