force-app/main/default/objects/Ofertas_posicionesSet__x/fields/Tariff__c.field-meta.xml
<CustomField>
    <fullName>Tariff__c</fullName>
    <description>Tariff</description>
    <externalDeveloperName>Tariff</externalDeveloperName>
    <label>Tariff</label>
    <precision>14</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>