force-app/main/default/objects/Ofertas_posicionesSet__x/fields/Unitcode__c.field-meta.xml
<CustomField>
    <fullName>Unitcode__c</fullName>
    <description>Unitcode</description>
    <externalDeveloperName>Unitcode</externalDeveloperName>
    <label>Unitcode</label>
    <length>3</length>
    <type>Text</type>
</CustomField>