force-app/main/default/objects/Ofertas_posicionesSet__x/fields/Zmetres__c.field-meta.xml
<CustomField>
    <fullName>Zmetres__c</fullName>
    <description>Zmetres</description>
    <externalDeveloperName>Zmetres</externalDeveloperName>
    <label>Zmetres</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>