force-app/main/default/objects/Ofertas_posicionesSet__x/fields/zunits__c.field-meta.xml
<CustomField>
    <fullName>zunits__c</fullName>
    <description>zunits</description>
    <externalDeveloperName>zunits</externalDeveloperName>
    <label>zunits</label>
    <length>3</length>
    <type>Text</type>
</CustomField>